--- a/pinncelwise/package.json
+++ b/pinncelwise/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -30,6 +30,7 @@
     "negotiator": "^1.0.0",
     "next": "15.1.4",
     "next-i18next": "^15.4.1",
+    "next-mdx-remote": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
@@ -41,9 +42,14 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/acorn": "^6.0.4",
+    "@types/estree": "^1.0.5",
+    "@types/mdx": "^2.0.11",
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "json-loader": "^0.5.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
