--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@sendgrid/mail": "^8.1.4",
     "ai": "^4.1.25",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
