--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@sendgrid/mail": "^8.1.4",
+    "@types/file-saver": "^2.0.7",
     "ai": "^4.1.25",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -46,6 +47,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
