--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@sendgrid/mail": "^8.1.4",
+    "@supabase/supabase-js": "^2.49.4",
     "@types/file-saver": "^2.0.7",
     "ai": "^4.1.25",
     "autoprefixer": "^10.4.20",
